// Copyright 2021 Harness Inc.
// 
// Licensed under the Apache License, Version 2.0
// http://www.apache.org/licenses/LICENSE-2.0

syntax = "proto3";

package io.harness.pms.contracts.progress;

option java_multiple_files = true;

import "io/harness/pms/contracts/ambiance/ambiance.proto";
import "io/harness/pms/contracts/execution/execution_mode.proto";

message ProgressEvent {
  io.harness.pms.contracts.ambiance.Ambiance ambiance = 1;
  io.harness.pms.contracts.execution.ExecutionMode executionMode = 2;
  bytes stepParameters = 3;
  bytes progressBytes = 4;
}
